[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dx_postprocess"
version = "0.1.0"
description = "YOLO post-processing module for DEEPX applications"
readme = {text = "Python binding for YOLO post-processing functions used in DEEPX applications", content-type = "text/plain"}
requires-python = ">=3.7"
authors = [
    {name = "DEEPX", email = "yjsong@deepx.ai"}
]
dependencies = [
    "pybind11==2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["dx_postprocess*"]