cmake_minimum_required(VERSION 3.16)
project(postprocess_libraries DESCRIPTION "DEEPX Postprocess Libraries")

if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

# Add subdirectories
add_subdirectory(scrfd)
add_subdirectory(scrfd_ppu)
add_subdirectory(yolov7)
add_subdirectory(yolov7_ppu)
add_subdirectory(yolov5)
add_subdirectory(yolov5_ppu)
add_subdirectory(yolov5face)
add_subdirectory(yolov5pose)
add_subdirectory(yolov5pose_ppu)
add_subdirectory(yolox)
add_subdirectory(yolov8)
add_subdirectory(yolov8seg)
add_subdirectory(yolov9)
add_subdirectory(yolov10)
add_subdirectory(yolov11)
add_subdirectory(yolov12)
add_subdirectory(deeplabv3)
