cmake_minimum_required(VERSION 3.14)
project(cpp_example DESCRIPTION "DEEPX C++ Example For Object Detection Programs")

if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

add_subdirectory(scrfd)
add_subdirectory(yolov7)
add_subdirectory(yolov5)
add_subdirectory(yolov5face)
add_subdirectory(yolov5pose)
add_subdirectory(yolox)
add_subdirectory(yolov8)
add_subdirectory(yolov9)
add_subdirectory(yolov10)
add_subdirectory(yolov11)
add_subdirectory(yolov12)
add_subdirectory(yolov26)
add_subdirectory(yolov26pose)
add_subdirectory(yolov26obb)
